docs: Fix layout shift when switching between hardware types.

--- a/docs.warp-charger.com/src/css/custom.css
+++ b/docs.warp-charger.com/src/css/custom.css
@@ -47,6 +47,7 @@ table {
 .unique-tabs .tabs__item {
     line-height: 16px;
     margin-right: 8px;
+    border: 0;
 }
 
 .unique-tabs .tabs__item--active {
